# YGPT-Credit-Bar

./: README.md  package.json
src/: index.html  popover.js  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  keychain.rs  lib.rs  main.rs  models.rs  poller.rs  state.rs  tray.rs
