[package]
name = "ygpt-credit-bar"
version = "0.1.0"
description = "Menu bar app for YourGPT credit usage"
authors = ["Rohan / Delta4 Infotech"]
edition = "2021"

[lib]
name = "ygpt_credit_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
keyring = { version = "3", features = ["apple-native"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
resvg = { version = "0.45", default-features = false }
tiny-skia = "0.11"
usvg = { version = "0.45", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"
